See the end of file for copying conditions.

Please send gdbm bug reports to <bug-gdbm@gnu.org>.

Version 1.23.90 (git)

* New gdbm_load option: --update

The --update (-U) option instructs gdbm_load to update an existing
database.

* Fix semantics of gdbm_load -r

The --replace (-r) is valid only when used together with --update.

* Use getline in gdbmtool shell.

* Bugfixes

** Fix binary dump format for key and/or data of zero size.
   (see https://puszcza.gnu.org.ua/bugs/?565)
** Fix location tracking and recover command in gdbtool.
   (see https://puszcza.gnu.org.ua/bugs/?566)
** Fix possible buffer underflow in gdbmload.
** Ensure any padding bytes in avail_elem structure are filled with 0.

** Improve the documentation.

Version 1.23, 2022-02-04

* Bucket cache switched from balanced tree to hash table

Change suggested by Terence Kelly.

* Speed up flushing the changed buckets on disk

* New option codes for gdbm_setopt

** GDBM_GETDBFORMAT

Return the database format.

** GDBM_GETDIRDEPTH

Return the directory depth, i.e. the number of initial (most significant)
bits in hash value that are interpreted as index to the directory.

** GDBM_GETBUCKETSIZE

Return maximum number of keys per bucket.

** GDBM_GETCACHEAUTO

Return the status of the automatic cache adjustment.

** GDBM_SETCACHEAUTO

Enable or disable automatic cache adjustment.

Version 1.22, 2021-10-19

* Fix file header validation

* Fix key verification in sequential access

* Fix testing with DejaGNU 1.6.3

* Fix stack overflow in print_usage

* Fix a leak of avail entry on pushing a new avail block

The leak would occur if the original avail table had odd number of entries.

* New gdbmtool variables: errorexit, errormask, trace, timing

"Errorexit" and "errormask" control which GDBM errors would cause the
program termination and emitting a diagnostic message,
correspondingly.  Both variables are comma-delimited lists of error
codes.
